--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <title>Home | Flite AirTaxi</title>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="src/colored.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
@@ -117,83 +118,105 @@
     </a>
   </div>
   <div class="oneslide" style="width: 100%; background: rgba(20,50,110,1);">
-    <div class="row title">
+    <div class="row">
+    </div>
+    <div class="row ttt">
+      <div class="col-sm-8">
       <h1>Falcon 50</h1>
-    </div>
-    <div class="row main">
-      <video width="100%" height="100%" playsinline autoplay muted loop>
-        <source src="src/first.mp4" type="video/mp4">
-      </video>
-      <div class="description" style="position: absolute;top:0px;left:5%;text-align: left;">
-        <h2>Falcon 50</h2>
-        <p>Nine Seat Supermid Jet</p>
-        <p>Coast to Coast Range</p>
-        <p>Finished Product Cost: $1.35M - $ 2.5M</p>
-        <p>Nationwide One-Way Charter Program</p>
+        <div class="main-wrapper">
+          <div class="video">
+            <video width="100%" height="100%" playsinline autoplay muted loop>
+              <source src="src/first.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="markimgs">
+            <img width="100%" src="src/img/download.png" alt="wifi" />
+            <br/>
+            <img width="100%" src="src/img/cert.png" alt="certification" />
+          </div>
+        </div>
       </div>
-      <div style="position: absolute;top:0px; right :0%; width: 30%; margin-top: 5%;">
-        <img style="width: 20%;" src="src/img/download.png" alt="wifi" />
-        <br/>
-        <img style="width: 20%;" src="src/img/cert.png" alt="wifi" />
-      </div>
-      <div style="position: absolute;bottom: 10%; left: 50%; transform: translateX(-50%); width: 50%;">
-        <img style="width: 100%;" src="src/img/F-c.png" alt="wifi" />
-        <br/>
+      <div class="col-sm-4">
+        <div class="bbb">
+          <div class="bbbwrapper">
+            <h2>Falcon 50</h2>
+            <p>Nine Seat Supermid Jet</p>
+            <p>Coast to Coast Range</p>
+            <p>Finished Product Cost: $1.35M - $ 2.5M</p>
+            <p>Nationwide One-Way Charter Program</p>
+            <button type="button" class="btn btn-info" data-toggle="modal" data-target="#myModal">More Info</button>
+          </div>
+        </div>        
       </div>
     </div>
   </div>
-  <div class="oneslide" style="width: 100%; background: rgba(200,200,200,1);">
-    <div class="row title">
+  <div class="oneslide" style="width: 100%; background: rgba(48,112,165,1);">
+    <div class="row">
+    </div>
+    <div class="row ttt" style=" flex-direction: row-reverse;">
+      <div class="col-sm-8">
       <h1>Hawker 800</h1>
-    </div>
-    <div class="row main">
-      <video width="100%" height="100%" playsinline autoplay muted loop>
-        <source src="src/second.mp4" type="video/mp4">
-      </video>
-      <div class="description" style="position: absolute;top:0px;left:5%;text-align: left;">
-        <h2>Hawker 800</h2>
-        <p>Eight Seat Midsize Jet</p>
-        <p>4:30 Range</p>
-        <p>Finished Product Cost: $1.0M - $1.65M</p>
-        <p>Nationwide One-Way Charter Program</p>
+        <div class="main-wrapper">
+          <div class="video">
+            <video width="100%" height="100%" playsinline autoplay muted loop>
+              <source src="src/first.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="markimgs">
+            <img width="100%" src="src/img/download.png" alt="wifi" />
+            <br/>
+            <img width="100%" src="src/img/cert.png" alt="certification" />
+          </div>
+        </div>
       </div>
-      <div style="position: absolute;top:0px; right :0%; width: 30%; margin-top: 5%;">
-        <img style="width: 20%;" src="src/img/download.png" alt="wifi" />
-        <br/>
-        <img style="width: 20%;" src="src/img/cert.png" alt="wifi" />
-      </div>
-      <div style="position: absolute;bottom: 10%; left: 50%; transform: translateX(-50%); width: 50%;">
-        <img style="width: 100%;" src="src/img/H-c.png" alt="wifi" />
-        <br/>
+      <div class="col-sm-4">
+        <div class="bbb">
+          <div class="bbbwrapper">
+            <h2>Hawker 800</h2>
+            <p>Eight Seat Midsize Jet</p>
+            <p>4:30 Range</p>
+            <p>Finished Product Cost: $1.0M - $1.65M</p>
+            <p>Nationwide One-Way Charter Program</p>
+            <button type="button" class="btn btn-info" data-toggle="modal" data-target="#myModal">More Info</button>
+          </div>
+        </div>        
       </div>
     </div>
   </div>
-  <div class="oneslide" style="width: 100%; background: rgba(88,88,200,1);">
-    <div class="row title">
+  <div class="oneslide" style="width: 100%; background: rgba(20,50,110,1);">
+    <div class="row">
+    </div>
+    <div class="row ttt">
+      <div class="col-sm-8">
       <h1>Gulfstream IV</h1>
-    </div>
-    <div class="row main">
-      <video width="100%" height="100%" playsinline autoplay muted loop>
-        <source src="src/third.mp4" type="video/mp4">
-      </video>
-      <div class="description" style="position: absolute;top:0px;left:5%;text-align: left;">
-        <h2>Gulfstream IV</h2>
-        <p>14 Seat Heavy Jet</p>
-        <p>Intercontinental Range</p>
-        <p>Finished Product Cost: $3.85M - $ 6.5M</p>
-        <p>Nationwide One-Way Charter Program</p>
+        <div class="main-wrapper">
+          <div class="video">
+            <video width="100%" height="100%" playsinline autoplay muted loop>
+              <source src="src/first.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="markimgs">
+            <img width="100%" src="src/img/download.png" alt="wifi" />
+            <br/>
+            <img width="100%" src="src/img/cert.png" alt="certification" />
+          </div>
+        </div>
       </div>
-      <div style="position: absolute;top:0px; right :0%; width: 30%; margin-top: 5%;">
-        <img style="width: 20%;" src="src/img/download.png" alt="wifi" />
-        <br/>
-        <img style="width: 20%;" src="src/img/cert.png" alt="wifi" />
-      </div>
-      <div style="position: absolute;bottom: 10%; left: 50%; transform: translateX(-50%); width: 50%;">
-        <img style="width: 100%;" src="src/img/G-c.png" alt="wifi" />
-        <br/>
+      <div class="col-sm-4">
+        <div class="bbb">
+          <div class="bbbwrapper">
+            <h2>Gulfstream IV</h2>
+            <p>14 Seat Heavy Jet</p>
+            <p>Intercontinental Range</p>
+            <p>Finished Product Cost: $3.85M - $ 6.5M</p>
+            <p>Nationwide One-Way Charter Program</p>
+            <button type="button" class="btn btn-info" data-toggle="modal" data-target="#myModal">More Info</button>
+          </div>
+        </div>        
       </div>
     </div>
   </div>
+
   <div class="articles row">
     <div id="polina">
       <h1>Polina</h1>
@@ -309,22 +332,22 @@
           <div class="clearfix"></div>
           <div class="footer-social">
             <a title="Bpm'online on LinkedIn" rel="nofollow" href="https://www.linkedin.com/company/bpmonline" target="_blank">
-              <img alt="Find us on LinkedIn" src="/sites/all/themes/ts_bootstrap_subtheme/img/social/linkedin.png" />
+              <img alt="Find us on LinkedIn" src="src/img/social/linkedin.png" />
             </a>
             <a title="Bpm'online on Facebook" rel="nofollow" href="https://www.facebook.com/bpmonline" target="_blank">
-              <img alt="Find us on Facebook" src="/sites/all/themes/ts_bootstrap_subtheme/img/social/facebook.png" />
+              <img alt="Find us on Facebook" src="src/img/social/facebook.png" />
             </a>
             <a title="Bpm'online on Google+" rel="nofollow" href="https://plus.google.com/u/0/+Bpmonline_plus/posts" target="_blank">
-              <img alt="Find us on Google+" src="/sites/all/themes/ts_bootstrap_subtheme/img/social/google.png" />
+              <img alt="Find us on Google+" src="src/img/social/google-plus.png" />
             </a>
             <a title="Bpm'online on Youtube" rel="nofollow" href="https://www.youtube.com/user/bpmonlinevideo" target="_blank">
-              <img alt="Find us on Youtube" src="/sites/all/themes/ts_bootstrap_subtheme/img/social/youtube.png" />
+              <img alt="Find us on Youtube" src="src/img/social/youtube.png" />
             </a>
             <a title="Bpm'online on Twitter" rel="nofollow" href="https://twitter.com/bpmonline" target="_blank">
-              <img alt="Find us on Twitter" src="/sites/all/themes/ts_bootstrap_subtheme/img/social/twitter.png" />
+              <img alt="Find us on Twitter" src="src/img/social/twitter.png" />
             </a>
             <a title="Bpm'online on Slideshare" rel="nofollow" href="http://www.slideshare.net/BPMonline" target="_blank">
-              <img alt="Find us on Slideshare" src="/sites/all/themes/ts_bootstrap_subtheme/img/social/slideshare.png" />
+              <img alt="Find us on Skype" src="src/img/social/skype.png" />
             </a>
           </div>
           <div class="clearfix"></div>
